with proper stubbing